Interpreter/ParSollang.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParSollang.y
-----------------------------------------------------------------------------


rule 6 is unused
rule 7 is unused
rule 8 is unused
rule 9 is unused
rule 27 is unused
rule 28 is unused
rule 29 is unused
rule 46 is unused
rule 47 is unused
rule 48 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> GlobalVarsDecl ListFnDef                (4)
	GlobalVarsDecl -> 'vars' '{' ListDecl '}'          (5)
	GlobalVarDecl -> Type Ident                        (6)
	ListGlobalVarDecl ->                               (7)
	ListGlobalVarDecl -> GlobalVarDecl                 (8)
	ListGlobalVarDecl -> GlobalVarDecl ';' ListGlobalVarDecl   (9)
	FnDef -> 'function' Type Ident '(' ListArg ')' FBody   (10)
	ListFnDef ->                                       (11)
	ListFnDef -> FnDef ListFnDef                       (12)
	Arg -> ArgPass Ident                               (13)
	ArgPass -> Type                                    (14)
	ArgPass -> Type '&'                                (15)
	ListArg ->                                         (16)
	ListArg -> Arg                                     (17)
	ListArg -> Arg ',' ListArg                         (18)
	FReturn -> 'return' ';'                            (19)
	FReturn -> 'return' Expr ';'                       (20)
	FBody -> '{' ListDecl ListFnDef ListStmt FReturn '}'   (21)
	Block -> '{' ListDecl ListStmt '}'                 (22)
	Decl -> Type Ident ';'                             (23)
	Decl -> Type Ident '=' Expr ';'                    (24)
	ListDecl ->                                        (25)
	ListDecl -> Decl ListDecl                          (26)
	LocalFnDef -> 'function' Type Ident '(' ListArg ')' FBody   (27)
	ListLocalFnDef ->                                  (28)
	ListLocalFnDef -> LocalFnDef ListLocalFnDef        (29)
	ListStmt ->                                        (30)
	ListStmt -> Stmt ListStmt                          (31)
	Stmt -> Ident '=' Expr ';'                         (32)
	Stmt -> 'continue' ';'                             (33)
	Stmt -> 'break' ';'                                (34)
	Stmt -> 'print' Expr ';'                           (35)
	Stmt -> Ident '++' ';'                             (36)
	Stmt -> Ident '--' ';'                             (37)
	Stmt -> 'if' '(' Expr ')' Block                    (38)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (39)
	Stmt -> 'while' '(' Expr ')' Block                 (40)
	Stmt -> Expr ';'                                   (41)
	Type -> 'int'                                      (42)
	Type -> 'string'                                   (43)
	Type -> 'boolean'                                  (44)
	Type -> 'void'                                     (45)
	ListType ->                                        (46)
	ListType -> Type                                   (47)
	ListType -> Type ',' ListType                      (48)
	Expr6 -> Ident                                     (49)
	Expr6 -> Integer                                   (50)
	Expr6 -> 'true'                                    (51)
	Expr6 -> 'false'                                   (52)
	Expr6 -> Ident '(' ListExpr ')'                    (53)
	Expr6 -> String                                    (54)
	Expr6 -> '(' Expr ')'                              (55)
	Expr5 -> '-' Expr6                                 (56)
	Expr5 -> '!' Expr6                                 (57)
	Expr5 -> Expr6                                     (58)
	Expr4 -> Expr4 MulOp Expr5                         (59)
	Expr4 -> Expr5                                     (60)
	Expr3 -> Expr3 AddOp Expr4                         (61)
	Expr3 -> Expr4                                     (62)
	Expr2 -> Expr2 RelOp Expr3                         (63)
	Expr2 -> Expr3                                     (64)
	Expr1 -> Expr2 '&&' Expr1                          (65)
	Expr1 -> Expr2                                     (66)
	Expr -> Expr1 '||' Expr                            (67)
	Expr -> Expr1                                      (68)
	ListExpr ->                                        (69)
	ListExpr -> Expr                                   (70)
	ListExpr -> Expr ',' ListExpr                      (71)
	AddOp -> '+'                                       (72)
	AddOp -> '-'                                       (73)
	MulOp -> '*'                                       (74)
	MulOp -> '/'                                       (75)
	MulOp -> '%'                                       (76)
	RelOp -> '<'                                       (77)
	RelOp -> '<='                                      (78)
	RelOp -> '>'                                       (79)
	RelOp -> '>='                                      (80)
	RelOp -> '=='                                      (81)
	RelOp -> '!='                                      (82)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'boolean'      { PT _ (TS _ 22) }
	'break'        { PT _ (TS _ 23) }
	'continue'     { PT _ (TS _ 24) }
	'else'         { PT _ (TS _ 25) }
	'false'        { PT _ (TS _ 26) }
	'function'     { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'print'        { PT _ (TS _ 30) }
	'return'       { PT _ (TS _ 31) }
	'string'       { PT _ (TS _ 32) }
	'true'         { PT _ (TS _ 33) }
	'vars'         { PT _ (TS _ 34) }
	'void'         { PT _ (TS _ 35) }
	'while'        { PT _ (TS _ 36) }
	'{'            { PT _ (TS _ 37) }
	'||'           { PT _ (TS _ 38) }
	'}'            { PT _ (TS _ 39) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	GlobalVarsDecl  rule  5
	GlobalVarDecl   rule  6
	ListGlobalVarDecl rules 7, 8, 9
	FnDef           rule  10
	ListFnDef       rules 11, 12
	Arg             rule  13
	ArgPass         rules 14, 15
	ListArg         rules 16, 17, 18
	FReturn         rules 19, 20
	FBody           rule  21
	Block           rule  22
	Decl            rules 23, 24
	ListDecl        rules 25, 26
	LocalFnDef      rule  27
	ListLocalFnDef  rules 28, 29
	ListStmt        rules 30, 31
	Stmt            rules 32, 33, 34, 35, 36, 37, 38, 39, 40, 41
	Type            rules 42, 43, 44, 45
	ListType        rules 46, 47, 48
	Expr6           rules 49, 50, 51, 52, 53, 54, 55
	Expr5           rules 56, 57, 58
	Expr4           rules 59, 60
	Expr3           rules 61, 62
	Expr2           rules 63, 64
	Expr1           rules 65, 66
	Expr            rules 67, 68
	ListExpr        rules 69, 70, 71
	AddOp           rules 72, 73
	MulOp           rules 74, 75, 76
	RelOp           rules 77, 78, 79, 80, 81, 82

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'vars'         shift, and enter state 5

	Program        goto state 3
	GlobalVarsDecl goto state 4

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	Program -> GlobalVarsDecl . ListFnDef               (rule 4)

	'function'     shift, and enter state 9
	%eof           reduce using rule 11

	FnDef          goto state 7
	ListFnDef      goto state 8

State 5

	GlobalVarsDecl -> 'vars' . '{' ListDecl '}'         (rule 5)

	'{'            shift, and enter state 6


State 6

	GlobalVarsDecl -> 'vars' '{' . ListDecl '}'         (rule 5)

	'boolean'      shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	'}'            reduce using rule 25

	Decl           goto state 16
	ListDecl       goto state 17
	Type           goto state 18

State 7

	ListFnDef -> FnDef . ListFnDef                      (rule 12)

	'!'            reduce using rule 11
	'('            reduce using rule 11
	'-'            reduce using rule 11
	'break'        reduce using rule 11
	'continue'     reduce using rule 11
	'false'        reduce using rule 11
	'function'     shift, and enter state 9
	'if'           reduce using rule 11
	'print'        reduce using rule 11
	'return'       reduce using rule 11
	'true'         reduce using rule 11
	'while'        reduce using rule 11
	L_Ident        reduce using rule 11
	L_integ        reduce using rule 11
	L_quoted       reduce using rule 11
	%eof           reduce using rule 11

	FnDef          goto state 7
	ListFnDef      goto state 15

State 8

	Program -> GlobalVarsDecl ListFnDef .               (rule 4)

	%eof           reduce using rule 4


State 9

	FnDef -> 'function' . Type Ident '(' ListArg ')' FBody    (rule 10)

	'boolean'      shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14

	Type           goto state 10

State 10

	FnDef -> 'function' Type . Ident '(' ListArg ')' FBody    (rule 10)

	L_Ident        shift, and enter state 2

	Ident          goto state 22

State 11

	Type -> 'boolean' .                                 (rule 44)

	'&'            reduce using rule 44
	L_Ident        reduce using rule 44


State 12

	Type -> 'int' .                                     (rule 42)

	'&'            reduce using rule 42
	L_Ident        reduce using rule 42


State 13

	Type -> 'string' .                                  (rule 43)

	'&'            reduce using rule 43
	L_Ident        reduce using rule 43


State 14

	Type -> 'void' .                                    (rule 45)

	'&'            reduce using rule 45
	L_Ident        reduce using rule 45


State 15

	ListFnDef -> FnDef ListFnDef .                      (rule 12)

	'!'            reduce using rule 12
	'('            reduce using rule 12
	'-'            reduce using rule 12
	'break'        reduce using rule 12
	'continue'     reduce using rule 12
	'false'        reduce using rule 12
	'if'           reduce using rule 12
	'print'        reduce using rule 12
	'return'       reduce using rule 12
	'true'         reduce using rule 12
	'while'        reduce using rule 12
	L_Ident        reduce using rule 12
	L_integ        reduce using rule 12
	L_quoted       reduce using rule 12
	%eof           reduce using rule 12


State 16

	ListDecl -> Decl . ListDecl                         (rule 26)

	'!'            reduce using rule 25
	'('            reduce using rule 25
	'-'            reduce using rule 25
	'boolean'      shift, and enter state 11
	'break'        reduce using rule 25
	'continue'     reduce using rule 25
	'false'        reduce using rule 25
	'function'     reduce using rule 25
	'if'           reduce using rule 25
	'int'          shift, and enter state 12
	'print'        reduce using rule 25
	'return'       reduce using rule 25
	'string'       shift, and enter state 13
	'true'         reduce using rule 25
	'void'         shift, and enter state 14
	'while'        reduce using rule 25
	'}'            reduce using rule 25
	L_Ident        reduce using rule 25
	L_integ        reduce using rule 25
	L_quoted       reduce using rule 25

	Decl           goto state 16
	ListDecl       goto state 21
	Type           goto state 18

State 17

	GlobalVarsDecl -> 'vars' '{' ListDecl . '}'         (rule 5)

	'}'            shift, and enter state 20


State 18

	Decl -> Type . Ident ';'                            (rule 23)
	Decl -> Type . Ident '=' Expr ';'                   (rule 24)

	L_Ident        shift, and enter state 2

	Ident          goto state 19

State 19

	Decl -> Type Ident . ';'                            (rule 23)
	Decl -> Type Ident . '=' Expr ';'                   (rule 24)

	';'            shift, and enter state 24
	'='            shift, and enter state 25


State 20

	GlobalVarsDecl -> 'vars' '{' ListDecl '}' .         (rule 5)

	'function'     reduce using rule 5
	%eof           reduce using rule 5


State 21

	ListDecl -> Decl ListDecl .                         (rule 26)

	'!'            reduce using rule 26
	'('            reduce using rule 26
	'-'            reduce using rule 26
	'break'        reduce using rule 26
	'continue'     reduce using rule 26
	'false'        reduce using rule 26
	'function'     reduce using rule 26
	'if'           reduce using rule 26
	'print'        reduce using rule 26
	'return'       reduce using rule 26
	'true'         reduce using rule 26
	'while'        reduce using rule 26
	'}'            reduce using rule 26
	L_Ident        reduce using rule 26
	L_integ        reduce using rule 26
	L_quoted       reduce using rule 26


State 22

	FnDef -> 'function' Type Ident . '(' ListArg ')' FBody    (rule 10)

	'('            shift, and enter state 23


State 23

	FnDef -> 'function' Type Ident '(' . ListArg ')' FBody    (rule 10)

	')'            reduce using rule 16
	'boolean'      shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14

	Arg            goto state 43
	ArgPass        goto state 44
	ListArg        goto state 45
	Type           goto state 46

State 24

	Decl -> Type Ident ';' .                            (rule 23)

	'!'            reduce using rule 23
	'('            reduce using rule 23
	'-'            reduce using rule 23
	'boolean'      reduce using rule 23
	'break'        reduce using rule 23
	'continue'     reduce using rule 23
	'false'        reduce using rule 23
	'function'     reduce using rule 23
	'if'           reduce using rule 23
	'int'          reduce using rule 23
	'print'        reduce using rule 23
	'return'       reduce using rule 23
	'string'       reduce using rule 23
	'true'         reduce using rule 23
	'void'         reduce using rule 23
	'while'        reduce using rule 23
	'}'            reduce using rule 23
	L_Ident        reduce using rule 23
	L_integ        reduce using rule 23
	L_quoted       reduce using rule 23


State 25

	Decl -> Type Ident '=' . Expr ';'                   (rule 24)

	'!'            shift, and enter state 36
	'('            shift, and enter state 37
	'-'            shift, and enter state 38
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 26
	Integer        goto state 27
	String         goto state 28
	Expr6          goto state 29
	Expr5          goto state 30
	Expr4          goto state 31
	Expr3          goto state 32
	Expr2          goto state 33
	Expr1          goto state 34
	Expr           goto state 35

State 26

	Expr6 -> Ident .                                    (rule 49)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 53)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	'('            shift, and enter state 71
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49


State 27

	Expr6 -> Integer .                                  (rule 50)
